MIGRATIONS-1061: Remove min chunk bytes and minor fixes
Signed-off-by: Tanner Lewis <lewijacn@amazon.com>